# x-filter

./: LICENSE  MANIFEST.in  README.md  appveyor.yml  environment.yml  junit.xml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: publish_pypi.yml  xFilter.yml
assets/: xfilter-schema.afdesign
conda/: meta.yaml
tests/: test_cli.py
x_filter/: README.md  __main__.py  _version.py  aggregate.py  filter.py  ops.py  reassign.py  slice_mmap_arrays.py  stats.py  utils.py
